<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2053C3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="35dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:src="@drawable/logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/borda"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#FFF"
            android:textColor="#FFF"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/borda"
            android:drawableEnd="@drawable/ic_lock"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#FFF"
            android:textColor="#FFF"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bordatwo"
            android:text="@string/entrar"
            android:textColor="#FFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="175dp"
            android:gravity="center"
            android:text="@string/esqueceu_sua_senha"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/txtCrie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nao_tem_uma_conta_crie_uma"
            android:textColor="#FFF" />
    </LinearLayout>
</LinearLayout>